# cvxcli

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  cvxcli-0.0.3-py3-none-any.whl  cvxcli-0.0.4-py3-none-any.whl  cvxcli-0.0.6-py3-none-any.whl  pyproject.toml  searchindex.js  taskfile.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: basic.yml  ci.yml  pre-commit.yml  release.yml
artifacts/sphinx/.doctrees/: environment.pickle  index.doctree  license.doctree
artifacts/sphinx/.doctrees/autoapi/: index.doctree
artifacts/sphinx/.doctrees/autoapi/simulator/: index.doctree
artifacts/sphinx/.doctrees/autoapi/simulator/builder/: index.doctree
artifacts/sphinx/.doctrees/autoapi/simulator/grid/: index.doctree
artifacts/sphinx/.doctrees/autoapi/simulator/month/: index.doctree
artifacts/sphinx/.doctrees/autoapi/simulator/portfolio/: index.doctree
artifacts/sphinx/.doctrees/autoapi/simulator/trading_costs/: index.doctree
artifacts/sphinx/.doctrees/autoapi/simulator/types/: index.doctree
artifacts/tests/coverage/: coverage.xml
artifacts/tests/html-coverage/: d_f2b2744377fc7fb9___init___py.html  d_f2b2744377fc7fb9_builder_py.html  d_f2b2744377fc7fb9_grid_py.html  d_f2b2744377fc7fb9_month_py.html  d_f2b2744377fc7fb9_portfolio_py.html  d_f2b2744377fc7fb9_trading_costs_py.html  d_f2b2744377fc7fb9_types_py.html  index.html  status.json
artifacts/tests/html-report/: report.html
cvx/cli/: smallest_eigenvalue.py  weather.py
docs/notebooks/: difference.html  monkey.html  pairs.html  quantstats.html
tests/: conftest.py  test_smallest_eigenvalue.py  test_weather.py
tests/resources/: test.bson
