[tool.poetry]
name = "cvxcli"
version = "0.0.0"
description = "Simple command line app demo"
authors = ["Thomas Schmelzer"]
readme = "README.md"
repository = "https://github.com/cvxgrp/cvxcli"
packages = [{include = "cvx"}]

[tool.poetry.dependencies]
python = ">=3.10"
fire = "*"
cvxbson = "*"
requests = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
mock = "*"

[tool.poetry.scripts]
weather = "cvx.cli.weather:main"
smallest-eigenvalue = "cvx.cli.smallest_eigenvalue:main"

[build-system]
requires = ["poetry>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]
