[project]
name = "cvxcli"
version = "0.0.0"
description = "Simple command line app demo"
readme = "README.md"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "cvxbson>=0.1.0",
    "fire>=0.7.0",
    "numpy>=2.2.1",
    "requests>=2.32.3",
]

[project.urls]
repository = "https://github.com/cvxgrp/cvxcli"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "mock"
]

[project.scripts]
weather = "cvx.cli.weather:main"
smallest-eigenvalue = "cvx.cli.smallest_eigenvalue:main"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvx"]
